<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IM（ASpark）</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_aspark_login">Login（ASpark）</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login_server">Server IP or Demain Name</string>
    <string name="login">Login</string>
    <string name="save_password">Save Password</string>
    <string name="auto_login">Auto Login</string>
    <string name="register">Register</string>
    <!-- Main Menu -->
    <string name="add_friend">Add Friend</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_chat_service">ChatServiceActivity</string>
    <string name="title_activity_chat_room">ChatRoomActivity</string>
    <string name="title_activity_parent">ParentActivity</string>
    <string name="title_activity_register">RegisterActivity</string>


    <!-- Register Activity -->
    <string name="edittext_user">User</string>
    <string name="edittext_password">Password</string>
    <string name="edittext_repassword">Re Password</string>
    <string name="edittext_server">Server</string>
    <string name="title_activity_face">Select Face</string>

</resources>